# brain-computer-compression

./: .dockerignore  .env.example  .env.production  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DOCKER_BUILD_FIX.md  DOCKER_QUICK_START.md  Dockerfile  Dockerfile.frontend  Dockerfile.minimal  LICENSE  Makefile  README.md  README_NEW.md  README_OLD.md  STATUS_REPORT.md  cleanup_plan.md  docker-compose.dev.yml  docker-compose.dev.yml.backup  docker-compose.yml  pyproject.toml  pytest.ini  remove_empty_contributing.sh  requirements-backend.txt  requirements-dev.txt  requirements.txt  run.sh  run.sh.backup  setup.py  temp_cleanup_log.txt  test_docker_workflow.sh  verify_reorganization.sh
.benchmarks/: benchmark_results.json
.copilot/: config.json
.cursor/: settings.json
.devcontainer/: devcontainer.json
.github/: copilot-docker-prompt.md  copilot-instructions.md  docker-copilot-instructions.md
config/: dashboard_config.json  defaults.yaml  logging.yaml  project_tracking.yaml
dashboard/: Dockerfile  README.md  index.html  package.json  package_clean.json  vite.config.ts  vitest.config.ts
docker/: dev-backend.Dockerfile  dev-frontend.Dockerfile  dev-tools.Dockerfile  nginx.conf  prod.Dockerfile  prometheus.yml
docs/: BCI_SYSTEMS_GUIDE.md  COMPLETION_SUMMARY_2025-11-03.md  DOCKER_SETUP.md  EMG_EXTENSION.md  TESTING_GUIDE.md  adapters_guide.md  adapters_implementation_summary.md  api_documentation.md  api_reference_phase8a.py  benchmarking_guide.md  benchmarks_report.md  comprehensive_analysis_and_improvements.md  dashboard_backend.md  gui_guide.md  implementation_completion_nov3_2025.md  implementation_summary_adapters_testing.md  mobile_module.md  phase2_summary.md  phase3_plan.md  phase3_summary.md  phase8a_implementation_summary.md  project_plan.md  readme_update_summary.md  roadmap.md  spin_off_projects.md  test_plan.md  user_guide.md  web-status.html
examples/: basic_usage.py  benchmarking_example.py  cuda_acceleration.ipynb  emg_demo.py  multi_device_pipeline_example.py  multi_system_demo.py  openbci_adapter_demo.py  streaming_compression_example.py  transformer_demo.py
logs/: comprehensive_analysis_and_improvements.md  comprehensive_analysis_and_improvements_v2.md  implementation_change_log_2025-07-20.md  implementation_change_log_2025-07-21.md  implementation_progress_log.md  improvement_summary_and_roadmap.md  phase10_implementation_log.md  phase1_change_log.txt  phase2_change_log.txt  phase8_completion_summary.md  phase8_implementation_summary.md
memory-bank/: README.md  app-description.md  change-log.md
notebooks/: BCI_Toolkit_Validation_Test.ipynb  Docker_Development_Environment_Setup.ipynb  Docker_Troubleshooting_Interactive.ipynb  Quick_Environment_Test.ipynb  Universal_Docker_Development_Strategy.ipynb  compression_analysis.ipynb  project_phases_implementation.ipynb  project_setup_and_git_verification.ipynb  vae_demo.ipynb
results/: adapter_profiling_report.txt
scripts/: benchmark_compression.py  benchmark_runner.py  completion_summary.sh  create_build_verification.sh  data_generator.py  dev-setup.bat  dev-setup.sh  docker-troubleshoot.sh  execute_cleanup.sh  execute_final_cleanup.sh  execute_reorganization.sh  final_cleanup.sh  hardware_benchmark.py  performance_profiler.py  profile_adapters.py  reorganization_complete.sh  reorganize_root.sh  run_cleanup_now.sh  telemetry_server.py  telemetry_server_clean.py  telemetry_server_complete.py  telemetry_server_new.py  test_reorganization.sh
src/: __init__.py  main.py
test_results/: quick_test_report_20251103_151513.json
tests/: README.md  conftest.py  debug_signal_processing.py  quick_run.sh  run_tests.py  test_adapters.py  test_adaptive_pipeline.py  test_utils.py  (+28 more)
(+213 files in other folders)
